<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#f0f0f0"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/sign_up"
        android:textColor="#ff0d71b3"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_signup"
        android:layout_below="@id/text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/signup_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/signup_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id"
            android:inputType="text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/signup_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_confirm"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/signup_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nick_name"
            android:inputType="text"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:text="@string/the_internet_is_disconnected"
            android:textColor="#ff0000"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_createID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/blue_button"
            android:onClick="buttonActions"
            android:text="@string/createID"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:onClick="buttonActions"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>