<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_sign"
        android:layout_marginBottom="10dp"
        android:background="#f0f0f0"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/sign_id_with_email"
        android:textColor="#ff0d71b3"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/checkBox_autoSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/sign_in_automatically"
            android:textColor="#808080" />

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/blue_button"
            android:onClick="buttonActions"
            android:text="@string/sign_in"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:onClick="buttonActions"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>